syntax = "proto3";

package Cloud;

message FileChunk {
  bytes data= 1; 
  int64 size = 2;
  bool is_last = 3;
}

message GetPresignedUrlDto {
  string fileName = 1;
  string mimeType = 2;
  string dir = 3;
}

message DownloadFileAsStreamDto {
  string key = 1;
}

message CloudPreSignedUrlResponse {
  optional string url = 1;
  optional string key = 2;
}

message UploadFileDto {
  FileChunk fileStream = 1;
  string fileKey = 2;
}

message StreamFileToCloudResponse {
  bool upload = 1;
}

service CloudService {
  rpc getPresignedUrl(GetPresignedUrlDto) returns (CloudPreSignedUrlResponse) {}
  rpc downloadFileAsStream(DownloadFileAsStreamDto) returns (stream FileChunk) {}
  rpc uploadFile(stream UploadFileDto) returns (StreamFileToCloudResponse) {}
}